--- a/css/styles.css
+++ b/css/styles.css
@@ -215,20 +215,25 @@ a {
   }
 
   .image1, .image2, .image3 {
-    width: 100%; 
+	display: block;
+    width: 90%; 
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
     height: auto;
     margin: 10px 0;
   }
 
   .pfont {
-    font-size: 1em; 
-    margin: 10px 15px; 
+    font-size: 1.2em; 
+    margin: 20px; 
     line-height: 1.5; 
   }
 
   
   iframe {
-    width: 100%;
+    width: 75%;
     max-width: 100%;
     height: 400px;
     margin: 15px 0;
