--- a/css/styles.css
+++ b/css/styles.css
@@ -232,9 +232,10 @@ a {
 
   
   iframe {
-    width: 75%;
-    max-width: 100%;
-    height: 400px;
-    margin: 15px 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    padding: 20px;
   }
 }
