--- a/css/styles.css
+++ b/css/styles.css
@@ -210,9 +210,9 @@ a {
   }
   
    h2 {
-    position: absolute;
-    top: 50px;
-    bottom: 20px;
+    
+    margin-top: 10px;
+    margin-bottom: 10px;
    }
   
   
