--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,6 @@ body {
 }
 
 h2 {
-  position: relative;
-  top: 30px;
-  bottom: 20px;
   color: black;
   margin-left: 20px;
   text-align: center;
@@ -47,6 +44,8 @@ h2 {
   font-weight: 400;
   font-style: normal;
   font-size: 24px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 h3{
