--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,10 @@ a {
 /* for mobile phones */	
 @media (min-width: 480px) {
   
+  body {
+	font-size: 16px; 
+  }
+  
   #header h1 {
     font-size: 2.2em; 
   }
